--- a/public/output.css
+++ b/public/output.css
@@ -239,12 +239,6 @@
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
-  .-top-32 {
-    top: calc(var(--spacing) * -32);
-  }
-  .-top-72 {
-    top: calc(var(--spacing) * -72);
-  }
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
@@ -332,9 +326,6 @@
   .mx-10 {
     margin-inline: calc(var(--spacing) * 10);
   }
-  .mx-24 {
-    margin-inline: calc(var(--spacing) * 24);
-  }
   .mx-auto {
     margin-inline: auto;
   }
@@ -350,29 +341,17 @@
   .-mt-0\.5 {
     margin-top: calc(var(--spacing) * -0.5);
   }
-  .-mt-1 {
-    margin-top: calc(var(--spacing) * -1);
-  }
   .-mt-5 {
     margin-top: calc(var(--spacing) * -5);
   }
-  .-mt-10 {
-    margin-top: calc(var(--spacing) * -10);
-  }
   .-mt-15 {
     margin-top: calc(var(--spacing) * -15);
-  }
-  .-mt-20 {
-    margin-top: calc(var(--spacing) * -20);
   }
   .-mt-26 {
     margin-top: calc(var(--spacing) * -26);
   }
   .-mt-28 {
     margin-top: calc(var(--spacing) * -28);
-  }
-  .-mt-30 {
-    margin-top: calc(var(--spacing) * -30);
   }
   .-mt-32 {
     margin-top: calc(var(--spacing) * -32);
@@ -383,17 +362,8 @@
   .-mt-43 {
     margin-top: calc(var(--spacing) * -43);
   }
-  .-mt-45 {
-    margin-top: calc(var(--spacing) * -45);
-  }
-  .-mt-50 {
-    margin-top: calc(var(--spacing) * -50);
-  }
   .-mt-55 {
     margin-top: calc(var(--spacing) * -55);
-  }
-  .-mt-57 {
-    margin-top: calc(var(--spacing) * -57);
   }
   .-mt-60 {
     margin-top: calc(var(--spacing) * -60);
@@ -406,21 +376,6 @@
   }
   .-mt-83 {
     margin-top: calc(var(--spacing) * -83);
-  }
-  .-mt-120 {
-    margin-top: calc(var(--spacing) * -120);
-  }
-  .-mt-125 {
-    margin-top: calc(var(--spacing) * -125);
-  }
-  .-mt-140 {
-    margin-top: calc(var(--spacing) * -140);
-  }
-  .-mt-200 {
-    margin-top: calc(var(--spacing) * -200);
-  }
-  .-mt-\[25rem\] {
-    margin-top: calc(25rem * -1);
   }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
@@ -443,23 +398,11 @@
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
-  .mt-16 {
-    margin-top: calc(var(--spacing) * 16);
-  }
-  .mt-20 {
-    margin-top: calc(var(--spacing) * 20);
-  }
-  .mt-\[-2rem\] {
-    margin-top: -2rem;
-  }
   .mr-1 {
     margin-right: calc(var(--spacing) * 1);
   }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
-  }
-  .mr-20 {
-    margin-right: calc(var(--spacing) * 20);
   }
   .mr-36 {
     margin-right: calc(var(--spacing) * 36);
@@ -506,15 +449,6 @@
   .mb-20 {
     margin-bottom: calc(var(--spacing) * 20);
   }
-  .mb-50 {
-    margin-bottom: calc(var(--spacing) * 50);
-  }
-  .mb-60 {
-    margin-bottom: calc(var(--spacing) * 60);
-  }
-  .mb-100 {
-    margin-bottom: calc(var(--spacing) * 100);
-  }
   .ml-1 {
     margin-left: calc(var(--spacing) * 1);
   }
@@ -548,27 +482,6 @@
   .table {
     display: table;
   }
-  .aspect-\[1\/2\] {
-    aspect-ratio: 1/2;
-  }
-  .aspect-\[1\/3\] {
-    aspect-ratio: 1/3;
-  }
-  .aspect-\[1\/4\] {
-    aspect-ratio: 1/4;
-  }
-  .aspect-\[1\/\] {
-    aspect-ratio: 1/;
-  }
-  .aspect-\[3\/4\] {
-    aspect-ratio: 3/4;
-  }
-  .aspect-\[4\/4\] {
-    aspect-ratio: 4/4;
-  }
-  .aspect-\[7\/8\] {
-    aspect-ratio: 7/8;
-  }
   .h-1 {
     height: calc(var(--spacing) * 1);
   }
@@ -580,6 +493,9 @@
   }
   .h-5 {
     height: calc(var(--spacing) * 5);
+  }
+  .h-8 {
+    height: calc(var(--spacing) * 8);
   }
   .h-9 {
     height: calc(var(--spacing) * 9);
@@ -599,38 +515,17 @@
   .h-60 {
     height: calc(var(--spacing) * 60);
   }
+  .h-64 {
+    height: calc(var(--spacing) * 64);
+  }
   .h-98 {
     height: calc(var(--spacing) * 98);
-  }
-  .h-100 {
-    height: calc(var(--spacing) * 100);
   }
   .h-115 {
     height: calc(var(--spacing) * 115);
   }
-  .h-120 {
-    height: calc(var(--spacing) * 120);
-  }
-  .h-125 {
-    height: calc(var(--spacing) * 125);
-  }
-  .h-140 {
-    height: calc(var(--spacing) * 140);
-  }
-  .h-150 {
-    height: calc(var(--spacing) * 150);
-  }
   .h-170 {
     height: calc(var(--spacing) * 170);
-  }
-  .h-190 {
-    height: calc(var(--spacing) * 190);
-  }
-  .h-200 {
-    height: calc(var(--spacing) * 200);
-  }
-  .h-1920 {
-    height: calc(var(--spacing) * 1920);
   }
   .h-\[0\.875rem\] {
     height: 0.875rem;
@@ -650,14 +545,8 @@
   .h-screen {
     height: 100vh;
   }
-  .max-h-60 {
-    max-height: calc(var(--spacing) * 60);
-  }
   .min-h-svh {
     min-height: 100svh;
-  }
-  .w-0 {
-    width: calc(var(--spacing) * 0);
   }
   .w-1 {
     width: calc(var(--spacing) * 1);
@@ -677,11 +566,11 @@
   .w-5 {
     width: calc(var(--spacing) * 5);
   }
+  .w-8 {
+    width: calc(var(--spacing) * 8);
+  }
   .w-9 {
     width: calc(var(--spacing) * 9);
-  }
-  .w-9\/12 {
-    width: calc(9/12 * 100%);
   }
   .w-10 {
     width: calc(var(--spacing) * 10);
@@ -689,26 +578,14 @@
   .w-10\/12 {
     width: calc(10/12 * 100%);
   }
-  .w-11 {
-    width: calc(var(--spacing) * 11);
-  }
-  .w-11\/12 {
-    width: calc(11/12 * 100%);
-  }
   .w-13 {
     width: calc(var(--spacing) * 13);
   }
   .w-14 {
     width: calc(var(--spacing) * 14);
   }
-  .w-20 {
-    width: calc(var(--spacing) * 20);
-  }
   .w-35 {
     width: calc(var(--spacing) * 35);
-  }
-  .w-40 {
-    width: calc(var(--spacing) * 40);
   }
   .w-50 {
     width: calc(var(--spacing) * 50);
@@ -716,26 +593,17 @@
   .w-60 {
     width: calc(var(--spacing) * 60);
   }
+  .w-64 {
+    width: calc(var(--spacing) * 64);
+  }
   .w-70 {
     width: calc(var(--spacing) * 70);
-  }
-  .w-72 {
-    width: calc(var(--spacing) * 72);
   }
   .w-75 {
     width: calc(var(--spacing) * 75);
   }
-  .w-80 {
-    width: calc(var(--spacing) * 80);
-  }
-  .w-87 {
-    width: calc(var(--spacing) * 87);
-  }
   .w-90 {
     width: calc(var(--spacing) * 90);
-  }
-  .w-100 {
-    width: calc(var(--spacing) * 100);
   }
   .w-\[1\.25rem\] {
     width: 1.25rem;
@@ -743,8 +611,14 @@
   .w-\[70\%\] {
     width: 70%;
   }
-  .w-\[110\%\] {
-    width: 110%;
+  .w-\[400px\] {
+    width: 400px;
+  }
+  .w-\[430px\] {
+    width: 430px;
+  }
+  .w-\[1000px\] {
+    width: 1000px;
   }
   .w-auto {
     width: auto;
@@ -770,11 +644,11 @@
   .max-w-86 {
     max-width: calc(var(--spacing) * 86);
   }
+  .max-w-\[430px\] {
+    max-width: 430px;
+  }
   .max-w-\[640px\] {
     max-width: 640px;
-  }
-  .max-w-lg {
-    max-width: var(--container-lg);
   }
   .max-w-md {
     max-width: var(--container-md);
@@ -784,6 +658,12 @@
   }
   .max-w-xs {
     max-width: var(--container-xs);
+  }
+  .flex-shrink {
+    flex-shrink: 1;
+  }
+  .flex-grow {
+    flex-grow: 1;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -904,6 +784,13 @@
       margin-inline-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-x-reverse)));
     }
   }
+  .space-x-6 {
+    :where(& > :not(:last-child)) {
+      --tw-space-x-reverse: 0;
+      margin-inline-start: calc(calc(var(--spacing) * 6) * var(--tw-space-x-reverse));
+      margin-inline-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-x-reverse)));
+    }
+  }
   .gap-y-8 {
     row-gap: calc(var(--spacing) * 8);
   }
@@ -968,6 +855,9 @@
   .bg-\[\#7b5e3d\] {
     background-color: #7b5e3d;
   }
+  .bg-\[\#9f856f\] {
+    background-color: #9f856f;
+  }
   .bg-green-100 {
     background-color: var(--color-green-100);
   }
@@ -985,6 +875,9 @@
   }
   .bg-idekasecond {
     background-color: var(--color-idekasecond);
+  }
+  .bg-idekatext {
+    background-color: var(--color-idekatext);
   }
   .bg-red-100 {
     background-color: var(--color-red-100);
@@ -1004,15 +897,6 @@
   .bg-\[url\(\'img\/01\/Page1\/background\.png\'\)\] {
     background-image: url('img/01/Page1/background.png');
   }
-  .bg-\[url\(\'img\/01\/page11\/bgform\.png\'\)\] {
-    background-image: url('img/01/page11/bgform.png');
-  }
-  .bg-\[url\(\'img\/01\/page11\/bingkai\.png\'\)\] {
-    background-image: url('img/01/page11/bingkai.png');
-  }
-  .bg-contain {
-    background-size: contain;
-  }
   .bg-cover {
     background-size: cover;
   }
@@ -1025,11 +909,17 @@
   .bg-repeat {
     background-repeat: repeat;
   }
+  .object-contain {
+    object-fit: contain;
+  }
   .object-cover {
     object-fit: cover;
   }
   .object-fill {
     object-fit: fill;
+  }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
   }
   .p-3 {
     padding: calc(var(--spacing) * 3);
@@ -1136,9 +1026,6 @@
   .pt-23 {
     padding-top: calc(var(--spacing) * 23);
   }
-  .pt-32 {
-    padding-top: calc(var(--spacing) * 32);
-  }
   .pr-4 {
     padding-right: calc(var(--spacing) * 4);
   }
@@ -1156,9 +1043,6 @@
   }
   .pb-28 {
     padding-bottom: calc(var(--spacing) * 28);
-  }
-  .pb-50 {
-    padding-bottom: calc(var(--spacing) * 50);
   }
   .pl-10 {
     padding-left: calc(var(--spacing) * 10);
@@ -1225,6 +1109,9 @@
   }
   .text-\[14px\] {
     font-size: 14px;
+  }
+  .text-\[40px\] {
+    font-size: 40px;
   }
   .text-\[46px\] {
     font-size: 46px;
@@ -1295,6 +1182,9 @@
   }
   .text-idekalina {
     color: var(--color-idekalina);
+  }
+  .text-idekasecond {
+    color: var(--color-idekasecond);
   }
   .text-idekatext {
     color: var(--color-idekatext);
@@ -1495,11 +1385,6 @@
       --tw-ring-color: #71502f;
     }
   }
-  .focus\:ring-\[\#d7b78f\] {
-    &:focus {
-      --tw-ring-color: #d7b78f;
-    }
-  }
   .focus\:outline-none {
     &:focus {
       --tw-outline-style: none;
@@ -1536,11 +1421,6 @@
       margin-top: calc(var(--spacing) * -0);
     }
   }
-  .sm\:-mt-\[30rem\] {
-    @media (width >= 40rem) {
-      margin-top: calc(30rem * -1);
-    }
-  }
   .sm\:ml-10 {
     @media (width >= 40rem) {
       margin-left: calc(var(--spacing) * 10);
@@ -1549,6 +1429,11 @@
   .sm\:block {
     @media (width >= 40rem) {
       display: block;
+    }
+  }
+  .sm\:h-screen {
+    @media (width >= 40rem) {
+      height: 100vh;
     }
   }
   .sm\:w-4\/5 {
@@ -1561,14 +1446,24 @@
       width: calc(var(--spacing) * 50);
     }
   }
-  .sm\:w-80 {
+  .sm\:w-\[400\] {
     @media (width >= 40rem) {
-      width: calc(var(--spacing) * 80);
+      width: 400;
     }
   }
-  .sm\:w-96 {
+  .sm\:w-\[400px\] {
     @media (width >= 40rem) {
-      width: calc(var(--spacing) * 96);
+      width: 400px;
+    }
+  }
+  .sm\:w-\[430px\] {
+    @media (width >= 40rem) {
+      width: 430px;
+    }
+  }
+  .sm\:w-\[460px\] {
+    @media (width >= 40rem) {
+      width: 460px;
     }
   }
   .sm\:max-w-\[430px\] {
@@ -1581,9 +1476,14 @@
       max-width: 100%;
     }
   }
-  .sm\:max-w-sm {
+  .sm\:flex-shrink-0 {
     @media (width >= 40rem) {
-      max-width: var(--container-sm);
+      flex-shrink: 0;
+    }
+  }
+  .sm\:flex-grow {
+    @media (width >= 40rem) {
+      flex-grow: 1;
     }
   }
   .sm\:grid-cols-2 {
